force-app/main/default/objects/Competitor_Products__c/Competitor_Products__c.object-meta.xml
<CustomObject>
    <description>MSD to competitor object. Captures all products and product information about our competitors.</description>
    <label>Competitor Products</label>
    <nameField>
        <label>Competitor Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>