force-app/main/default/objects/Competitor_Products__c/fields/Product_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Product_Benefits__c</fullName>
    <label>Product Benefits</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>