force-app/main/default/objects/Competitor_Products__c/fields/Product_Blog__c.field-meta.xml
<CustomField>
    <fullName>Product_Blog__c</fullName>
    <label>Product Blog</label>
    <type>Url</type>
</CustomField>