force-app/main/default/objects/Competitor_Products__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Iron Mountain Records Management</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Unified Records Management Solutions</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Technology Escrow</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Document Management</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Hosted Image Archiving</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Discovery and Litigation Support</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Marketing Production and Fulfillment Services</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Entertainment Services</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Secure Shredding</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Connect</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Consulting  Services</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Data Backup and Recovery</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Document Imaging</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Offsite Tape Vaulting</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Restoration and Migration Services</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Cloud Storage and Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>