force-app/main/default/objects/Competitor_Products__c/fields/Product_Features__c.field-meta.xml
<CustomField>
    <fullName>Product_Features__c</fullName>
    <label>Product Features</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>