force-app/main/default/objects/Competitor_Products__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Iron Mountain Records Management Services</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Intellectual Property Management</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Document Imaging and Management</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Marketing Production and Fulfillment Services</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Health Information Management Solutions</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Entertainment Services</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Data Backup and Recovery</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Secure Shredding</fullName>
            </value>
            <value>
                <fullName>Iron Mountain Consulting  Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>