force-app/main/default/objects/Competitor_Products__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Iron Mountain Vital Records Protection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>