force-app/main/default/objects/Competitor_Products__c/fields/Product_Page__c.field-meta.xml
<CustomField>
    <fullName>Product_Page__c</fullName>
    <label>Product Page</label>
    <type>Url</type>
</CustomField>