force-app/main/default/objects/Competitor_Products__c/fields/Product_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Product_Pricing__c</fullName>
    <label>Product Pricing</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>