force-app/main/default/objects/Competitor_Products__c/fields/Product_Review__c.field-meta.xml
<CustomField>
    <fullName>Product_Review__c</fullName>
    <label>Product Review</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>