force-app/main/default/objects/Competitor_Products__c/fields/Product_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Product_Strategy__c</fullName>
    <label>Product Strategy</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>