force-app/main/default/objects/Competitor_Products__c/fields/Product_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Product_Strengths__c</fullName>
    <label>Product Strengths</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>