force-app/main/default/objects/Competitor_Products__c/fields/Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Product_Summary__c</fullName>
    <label>Product Summary</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>